DRTII-1891 Alignment fixes

--- a/server/src/main/assets/stylesheets/main.less
+++ b/server/src/main/assets/stylesheets/main.less
@@ -2374,7 +2374,12 @@ body {
 
 .terminal-checkbox-label {
   display: flex;
+  align-items: center;
   gap: 8px;
+}
+
+.terminal-checkbox-label input {
+  margin: 0px;
 }
 
 .port-config {
